# boost_connector

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: library_props.cmake
example/: CMakeLists.txt
example/entity-key2/: CMakeLists.txt  main.cpp
example/spot-book/: CMakeLists.txt  main.cpp
include/boost/connector/: condition.hpp  jsonext.hpp  order_book.hpp  price_ladder.hpp  property_map.hpp  property_value.hpp  sha256_digest.hpp
include/boost/connector/config/: error.hpp
include/boost/connector/dependency/: dependency_map.hpp
include/boost/connector/entity/: entity_cache.hpp  entity_impl_concept.hpp  entity_key.hpp  entity_lifetime_impl.hpp  immutable_key.hpp  key.hpp  key_base.hpp  lifetime_ptr.hpp  mutable_key.hpp
include/boost/connector/entity/impl/: immutable_key.hpp  key_base.hpp  mutable_key.hpp
include/boost/connector/interface/: order_book_concept.hpp  orderbook_snapshot.hpp  price_ladder.hpp  price_ladder_concept.hpp
include/boost/connector/ops/: get_price_value.hpp  price_greater.hpp  price_less.hpp
include/boost/connector/snapshot/: snapshot.hpp
include/boost/connector/types/: bid_ladder.hpp  orderbook_level.hpp  price.hpp  quantity.hpp  timestamp.hpp
include/boost/connector/util/: async_circular_buffer.hpp  async_latch.hpp  async_queue.hpp  async_void.hpp  check_executor.hpp  describe_operators.hpp  equals.hpp  hash_any.cpp  hash_any.hpp  hash_value.hpp  ostream.hpp  transport_type.hpp  url.hpp  websocket_stream_variant.hpp
src/: condition.spec.cpp  entity_cache.cpp  entity_key.cpp  jsonext.cpp  make_lifetime_ptr.spec.cpp  order_book.cpp  price_ladder.cpp  property_map.cpp  property_map.spec.cpp  property_value.cpp  property_value.spec.cpp  sha256_digest.cpp
src/dependency/: dependency_map.cpp
src/entity/: entity_key.spec.cpp  immutable_key.cpp  key_base.cpp  mutable_key.cpp
src/snapshot/: orderbook.cpp  orderbook.hpp  orderbook.spec.cpp  snapshot.cpp  snapshot.spec.cpp
src/types/: bid_ladder.cpp  bid_ladder.spec.cpp  orderbook_level.cpp
src/util/: async_latch.cpp  check_executor.cpp  url.cpp  websocket_message.cpp  websocket_stream_variant.cpp
test/: CMakeLists.txt  main.cpp
